--- a/olubabs01a_site/pubspec.yaml
+++ b/olubabs01a_site/pubspec.yaml
@@ -30,17 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  pdfx: ^2.3.0
+  flutter_email_sender: ^5.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
   provider: ^6.0.5
+  performance: ^0.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+dependency_overrides:
+  path_provider_android: 2.0.11 
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,7 +66,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+    - assets/documents/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
